ros2_ws/log/build_2024-04-11_16-55-35/robot_controller/stderr.log
  File "/home/keime/ros2_ws/install/robot_controller/lib/python3.10/site-packages/robot_controller/command_subscriber_action.py", line 18
    def enc_callback_R(gpio,level,tick)
                                       ^
SyntaxError: expected ':'

